Nav bar overflow fix on landing page

--- a/src/components/landing/Nav2.scss
+++ b/src/components/landing/Nav2.scss
@@ -1,6 +1,6 @@
 $template-nav-bg-color: #001529;
 
-.header0 {
+.header1 {
   background: $template-nav-bg-color;
   min-width: 1589px;
   z-index: 1;
